...
                android:layout_marginLeft="@dimen/list_item_padding"
                android:layout_marginRight="@dimen/list_item_padding"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tasks_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <TextView
                android:id="@+id/bottomText"
...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_tasks_all"
                android:layout_marginBottom="@dimen/list_item_padding" />

            <TextView
                android:id="@+id/myWebPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/link_to_my_page"
                android:autoLink="web"
                android:layout_marginBottom="@dimen/list_item_padding" />
...
