...
    <string name="edit_task">Edit TO-DO</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">TO-DOs</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your TO-DO here.</string>
    <string name="empty_task_message">TO DOs cannot be empty</string>
    <string name="successfully_saved_task_message">TO-DO saved</string>
...
